Adicionando Login y Registro

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -21,7 +21,7 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 20px;
 $line-height-base: 1.6;
-$text-color: #1d2226;
+$text-color: #71787e;
 
 // Navbar
 $navbar-default-bg: #fff;
