--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
@@ -8,5 +7,23 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
-// My Styles
-@import "myscss";
+input {
+  border-radius: 5px;
+  border: none;
+  margin: 5px;
+  padding: 5px;
+  padding-left: 15px;
+  transition: 0.5s;
+}
+
+input:active {
+  outline: none !important;
+}
+input:hover {
+  outline: none !important;
+}
+
+input[type="submit"] {
+  background: $brand-primary;
+  color: #ffffff;
+}
