--- a/resources/assets/js/book/App/App.scss
+++ b/resources/assets/js/book/App/App.scss
@@ -1,6 +1,6 @@
-@import '../../../sass/variables';
+@import "../../../sass/variables";
 
-.transfer-form{
+.transfer-form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,25 +10,36 @@
   border-radius: 5px;
   font-size: $input-size-text;
 
-  input{
+  input {
     border-radius: 5px;
     border: none;
     margin: 5px;
   }
 
-  input[type='submit']{
+  input[type="submit"] {
     background: $brand-primary;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 }
 
-.micontenedor{
+.miContenedor {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 
-  .title{
+  .title {
     font-size: 90px;
+  }
+}
+
+.navBar {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 30px;
+  a {
+    text-decoration: none;
   }
 }
